# tock

./: Cargo.toml
boards/nordic/nrf52840dk/src/: io.rs  lib.rs  main.rs
boards/nordic/nrf52_components/src/: startup.rs
boards/tutorials/nrf52840dk-thread-tutorial/src/: main.rs
capsules/extra/: Cargo.toml
capsules/extra/src/: temperature.rs
capsules/extra/src/ieee802154/: driver.rs  mac.rs
chips/nrf52/: Cargo.toml
chips/nrf52/src/: chip.rs  ieee802154_radio.rs  uart.rs
chips/nrf52840/: Cargo.toml
chips/nrf52840/src/: ieee802154_radio.rs  interrupt_service.rs  lib.rs  power_manager.rs
chips/nrf5x/: Cargo.toml
chips/nrf5x/src/: temperature.rs
kernel/src/: lib.rs  power_manager.rs
kernel/src/utilities/: mod.rs
libraries/power_states/: Cargo.toml
libraries/power_states/src/: lib.rs
