# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2022.

[package]
name = "nrf52"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
cortexm4f = { path = "../../arch/cortex-m4f" }
kernel = { path = "../../kernel" }
enum_primitive = { path = "../../libraries/enum_primitive" }
# todo update this to fetch from cargo once publish abacus-registers crate
abacus_registers = { git = "https://github.com/abacus-rs/abacus-registers", branch = "dev"}
[dependencies.nrf5x]
path = "../nrf5x"
features = ["nrf52"]

[lints]
workspace = true
