# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2022.

[package]
name = "nrf5x"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
cortexm4f = { path = "../../arch/cortex-m4f"}
kernel = { path = "../../kernel" }
enum_primitive = { path = "../../libraries/enum_primitive" }
# for now, fetch from github while testing
# abacus_registers = { git = "https://github.com/abacus-rs/abacus-registers", branch = "dev" }
abacus_registers = { path = "../../../abacus-registers"}

[features]
default = []

nrf51 = []
nrf52 = []

[lints]
workspace = true
